API agent fixes